tests/baselines/reference/duplicateObjectLiteralProperty_computedName3.errors.txt
b.ts(5,5): error TS1117: An object literal cannot have multiple properties with the same name.
b.ts(10,5): error TS1117: An object literal cannot have multiple properties with the same name.
b.ts(15,5): error TS1117: An object literal cannot have multiple properties with the same name.
b.ts(20,5): error TS1117: An object literal cannot have multiple properties with the same name.


==== a.ts (0 errors) ====
    export const n = 1;
    export const s = "s";
    export enum E1 { A = "ENUM_KEY" }
    export enum E2 { B }
    
==== b.ts (4 errors) ====
    import * as keys from "./a";
    
    const t1 = {
        [keys.n]: 1,
        [keys.n]: 1, // duplicate
        ~~~~~~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    
    const t2 = {
        [keys.s]: 1,
        [keys.s]: 1, // duplicate
        ~~~~~~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    
    const t3 = {
        [keys.E1.A]: 1,
        [keys.E1.A]: 1, // duplicate
        ~~~~~~~~~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    
    const t4 = {
        [keys.E2.B]: 1,
        [keys.E2.B]: 1, // duplicate
        ~~~~~~~~~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    